tests/checker/bad/lib/TestLibDiamondTopCycle.scillib
scilla_version 0

import TestLibDiamondLeftCycle TestLibDiamondRightCycle

library TestLibDiamondTopCycle
